cleanup small fixes

--- a/EqUiWebUi/Areas/Alert/Views/Alert/Edit.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/Edit.cshtml
@@ -224,8 +224,8 @@
 
 @section scripts{
     @*https://summernote.org/getting-started/*@
-    <link href="~/Content/summernote.css" rel="stylesheet" />
-    <script src="~/Scripts/summernote.js"></script>
+    <link href="~/Content/summernote-bs4.css" rel="stylesheet" />
+    <script src="~/Scripts/summernote-bs4.js"></script>
     <script>
         $('#comments').summernote({
             height: 100,                 // set editor height
