--- a/EqUiWebUi/Areas/VASC/Views/vasc/Index.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/vasc/Index.cshtml
@@ -6,10 +6,13 @@
 
 <h2>VASC... If you are not GM or SDB why are you here?</h2>
 
-<div class="card-header bg-primary">
-    <div class="card-header bg-primary">
-        <h4 class="card-title">VASC MAIN settings</h4>
-        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+
+<div class="card">
+    <div class="card-header bg-danger">
+        <h5 class="card-title text-white">
+            VASC MAIN settings
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h5>
     </div>
     <div class="card-body">
         <div class="alert alert-danger">
@@ -36,10 +39,14 @@
     </div>
 </div>
 
-<div class="panel panel-warning">
-    <div class="card-header bg-primary">
-        <h4 class="card-title">VASC subsystem settings</h4>
-        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+<hr />
+
+<div class="card">
+    <div class="card-header bg-danger">
+        <h5 class="card-title text-white">
+            VASC subsystems
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h5>
     </div>
 
     <div class="card-body">
@@ -69,7 +76,7 @@
         <p><a href="~/vasc/c_error/index" class="btn btn-danger btn-sm">c_error &raquo;</a></p>
 
         <hr />
-        TODO
+        <h3>TODO</h3>
         <p><a href="~/vasc/c_job/index" class="btn btn-danger btn-sm">c_job &raquo;</a>Manage c_job</p>
     </div>
 </div>
