--- a/EqUiWebUi/Areas/VASC/Views/c_controller_class/_Details.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller_class/_Details.cshtml
@@ -1,95 +1,113 @@
 ﻿@model EqUiWebUi.Areas.VASC.Models.c_controller_class
 
 <div class="card">
-    <div class="card-header bg-primary">
-        <h4 class="card-title">
+    <div class="card-header bg-light">
+        <h5 class="card-title text-black-50">
             c controllers in this class
-            @if (ViewBag.controller_id != null){<strong>Filtered on controllerID: @ViewBag.controller_id</strong>}
-        </h4>
-        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
-    </div>
-    <div class="alert-info">
+            @if (ViewBag.controller_id != null)
+            {
+            <strong>Filtered on controllerID: @ViewBag.controller_id</strong>}
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h5>
     </div>
     <div class="card-body">
         <div id="c_controllerGrid" class="mvc-grid"></div>
     </div>
 </div>
 
+<hr />
+
 <div class="card">
-    <div class="card-header bg-primary">
-        <h4 class="card-title">c variable </h4>
-        <div class="text-muted">
-            (Rapid variables or IO signals handeld *logged to a table or used as event)
-            @Html.ActionLink("c_variable index", "Index", "c_variable")
-        </div>
-        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
-    </div>
-    <div class="alert-info">
+    <div class="card-header bg-light">
+        <h5 class="card-title text-black-50">
+            c variable
+        </h5>
+            <div class="text-muted">
+                (Rapid variables or IO signals handeld *logged to a table or used as event)
+                @Html.ActionLink("c_variable index", "Index", "c_variable")
+            </div>
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        
     </div>
     <div class="card-body">
         <div id="c_variableGrid" class="mvc-grid"></div>
     </div>
 </div>
 
+<hr />
+
 <div class="card">
-    <div class="card-header bg-primary">
-        <h4 class="card-title">c variable search </h4>
+    <div class="card-header bg-light">
+        <h5 class="card-title text-black-50">
+            c variable search
+        </h5>
         <div class="text-muted">
             (Rapid variabels to be search for at startup and logged to a table)
             @Html.ActionLink("c_variable search_index", "Index", "c_variable_search")
         </div>
-            <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
-        </div>
-        <div class="alert-info">
-        </div>
-        <div class="card-body">
-            <div id="c_variable_searchGrid" class="mvc-grid"></div>
-        </div>
+        <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+
     </div>
 
+    <div class="card-body">
+        <div id="c_variable_searchGrid" class="mvc-grid"></div>
+    </div>
+</div>
+
+<hr />
+
 <div class="card">
-    <div class="card-header bg-primary">
-        <h4 class="card-title">c error</h4>
+    <div class="card-header bg-light">
+        <h5 class="card-title text-black-50">
+            c error
+        </h5>
         <div class="text-muted">
             (alarms from controllereventlog can be setup to be ignored or redirected to junk table)
             @Html.ActionLink("c_error_index", "Index", "c_error")
         </div>
-        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
-    </div>
-    <div class="alert-info">
+        <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+
     </div>
     <div class="card-body">
         <div id="c_errorGrid" class="mvc-grid"></div>
     </div>
 </div>
 
+<hr />
+
 <div class="card">
-    <div class="card-header bg-primary">
-        <h4 class="card-title">c csv log</h4>
+    <div class="card-header bg-light">
+        <h5 class="card-title text-black-50">
+            c CSV log
+        </h5>
         <div class="text-muted">
             (csv file type file to be monitored and logged to a table)
             @Html.ActionLink("c_csv_log_index", "Index", "c_csv_log")
         </div>
-        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+        <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+
     </div>
-    <div class="alert-info">
-    </div>
+  
     <div class="card-body">
         <div id="c_csv_logGrid" class="mvc-grid"></div>
     </div>
 </div>
 
+<hr />
+
 <div class="card">
-    <div class="card-header bg-primary">
-        <h4 class="card-title">c device info</h4>
+    <div class="card-header bg-light">
+        <h5 class="card-title text-black-50">
+            c device inf
+        </h5>
         <div class="text-muted">
             (setup how device info is monitored)
             @Html.ActionLink("c_device_info_log_index", "Index", "c_device_info")
         </div>
-        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+        <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+
     </div>
-    <div class="alert-info">
-    </div>
+
     <div class="card-body">
         <div id="c_device_infoGrid" class="mvc-grid"></div>
     </div>
