--- a/EqUiWebUi/Views/Shared/_MinimalLayout.cshtml
+++ b/EqUiWebUi/Views/Shared/_MinimalLayout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - VCG GA UB12 ASP.NET Application</title>
+    <title>@ViewBag.Title - VCG GA UB12</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
