--- a/EqUiWebUi/Areas/Alert/Views/c_triggers/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/c_triggers/Index.cshtml
@@ -28,7 +28,7 @@
                                  @Html.ActionLink("Show", "Index","h_alert", new { c_trigger_id = c.id },null) + " | " +
                                  @Html.ActionLink("Delete", "Delete", new { id = c.id })
                 ).InitialSort(GridSortOrder.Asc).Filterable(false);
-}).Filterable(true).Sortable(true).Empty("Did not find anything").Css("table-hover")
+}).Filterable().Sortable().Empty("Did not find anything").Css("table-hover")
 
 @section scripts{
     <script>
