--- a/EqUiWebUi/Areas/PJV/Views/PJV/GetChanges.cshtml
+++ b/EqUiWebUi/Areas/PJV/Views/PJV/GetChanges.cshtml
@@ -20,7 +20,7 @@
     columns.Add(c => c.RevisionCount).Titled("RevisionCount");
     columns.Add(c => c.Delta).Titled("Delta");
 
-}).Filterable(true).Sortable(true).Pageable(pager =>
+}).Filterable().Sortable().Pageable(pager =>
 {
     pager.RowsPerPage = 20;
 }).Empty("Did not find anything").Css("table-hover")
