--- a/EqUiWebUi/Areas/VASC/Views/c_error/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_error/_List.cshtml
@@ -17,7 +17,7 @@
                     .Encoded(false)
                     .RenderedAs(c => @Html.ActionLink("Edit", "Edit", new { id = c.id })
                     ).Filterable(false);
-}).Filterable(true).Sortable(true).Pageable(pager =>
+}).Filterable().Sortable().Pageable(pager =>
 {
     pager.RowsPerPage = 10;
 }).Empty("Did not find anything").Css("table-hover")
