--- a/EqUiWebUi/Areas/user_management/Views/users/ListSessions.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/users/ListSessions.cshtml
@@ -11,4 +11,4 @@
     columns.Add(c => c.username).Titled("Username").InitialSort(GridSortOrder.Asc);
     columns.Add(c => c.sessionId).Titled("sessionId");
 
-}).Filterable(true).Sortable(true).Empty("Did not find anything").Css("table-hover")
+}).Filterable().Sortable().Empty("Did not find anything").Css("table-hover")
