--- a/EqUiWebUi/Areas/user_management/Views/usersPermisions/_permisions.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/usersPermisions/_permisions.cshtml
@@ -12,4 +12,4 @@
                 .Encoded(false)
                 .RenderedAs(c => @Html.ActionLink("Delete", "Delete", new { id = c.id })
                 ).InitialSort(GridSortOrder.Asc).Filterable(false);
-}).Filterable(true).Sortable(true).Empty("Did not find anything").Css("table-hover")
+}).Filterable().Sortable().Empty("Did not find anything").Css("table-hover")
