--- a/EqUiWebUi/Areas/VASC/Views/Breakdown/getBreakdowns.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/Breakdown/getBreakdowns.cshtml
@@ -22,7 +22,7 @@
     .Encoded(false)
     .RenderedAs(c => @Html.ActionLink("JobDetails", "rtJob", "Breakdown", new { area = "VASC", jobID = c.id }, new { @class = "btn btn-primary btn-sm" })
     ).Filterable(false);
-}).Filterable(true).Sortable(true).Pageable(pager =>
+}).Filterable().Sortable().Pageable(pager =>
 {
     pager.RowsPerPage = 20;
 }).Empty("Did not find anything").Css("table-hover")
