--- a/EqUiWebUi/Areas/VASC/Views/c_device_info/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_device_info/_List.cshtml
@@ -17,7 +17,7 @@
                     .Encoded(false)
                     .RenderedAs(c => @Html.ActionLink("Show", "GetDeviceInfoData", new { c_device_info_id = c.id, controller_id = ViewBag.controller_id })
                     ).Filterable(false);
-}).Filterable(true).Sortable(true).Pageable(pager =>
+}).Filterable().Sortable().Pageable(pager =>
 {
     pager.RowsPerPage = 10;
 }).Empty("Did not find anything").Css("table-hover")
