--- a/EqUiWebUi/Areas/VASC/Views/c_service_setup/_sessionSetup.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_service_setup/_sessionSetup.cshtml
@@ -12,7 +12,7 @@ columns.Add(c => c.name).Titled("name");
                     .Encoded(false)
                     .RenderedAs(c => @Html.ActionLink("Edit", "Edit", new { id = c.id })
                     ).Filterable(false);
-}).Filterable(true).Sortable(true).Pageable(pager =>
+}).Filterable().Sortable().Pageable(pager =>
 {
     pager.RowsPerPage = 10;
 }).Empty("Did not find anything").Css("table-hover")
