--- a/EqUiWebUi/Areas/VASC/Views/c_variable/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_variable/_List.cshtml
@@ -19,7 +19,7 @@
                 .Encoded(false)
                 .RenderedAs(c => @Html.ActionLink("Show", "GetVariableData", new { c_variable_id = c.id, controller_id = ViewBag.controller_id })
                 ).Filterable(false);
-}).Filterable(true).Sortable(true).Pageable(pager =>
+}).Filterable().Sortable().Pageable(pager =>
 {
     pager.RowsPerPage = 10;
 }).Empty("Did not find anything").Css("table-hover")
