--- a/EqUiWebUi/Areas/VASC/Views/c_variable_search/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_variable_search/_List.cshtml
@@ -20,7 +20,7 @@
             .Encoded(false)
             .RenderedAs(c => @Html.ActionLink("Show", "GetVariableData", new { c_variable_search_id = c.id, controller_id = ViewBag.controller_id })
             ).Filterable(false);
-}).Filterable(true).Sortable(true).Pageable(pager =>
+}).Filterable().Sortable().Pageable(pager =>
 {
     pager.RowsPerPage = 10;
 }).Empty("Did not find anything").Css("table-hover")
