--- a/EqUiWebUi/Areas/user_management/Views/c_ownership/Index.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/c_ownership/Index.cshtml
@@ -26,7 +26,7 @@
                                      @Html.ActionLink("Delete", "Delete", new { id = c.id })
 
                     ).InitialSort(GridSortOrder.Asc).Filterable(false).Css("XXd-none XXd-md-block");;
-    }).Filterable(true).Sortable(true).Pageable(pager =>
+    }).Filterable().Sortable().Pageable(pager =>
     {
         pager.RowsPerPage = 15;
     }).Empty("Did not find anything").Css("table-hover")
