--- a/EqUiWebUi/Areas/user_management/Views/users/Index.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/users/Index.cshtml
@@ -25,7 +25,7 @@
                                  @Html.ActionLink("Delete", "Delete", new { id = c.id })
 
                 ).InitialSort(GridSortOrder.Asc).Filterable(false);
-}).Filterable(true).Sortable(true).Pageable(pager =>
+}).Filterable().Sortable().Pageable(pager =>
 {
     pager.RowsPerPage = 15;
 }).Empty("Did not find anything").Css("table-hover")
