added basic layout for welding area

--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -155,6 +155,11 @@
             <a href="~/STW040/STW040/index" class="btn btn-primary btn-sm">STW040&raquo;</a>(test)
             Test met db toegang naar stw040
         </p>
+
+        <p>
+            <a href="~/Welding/Welding/index" class="btn btn-primary btn-sm">AASPOT&raquo;</a>(test)
+            Jens zijn area
+        </p>
     </div>
 </div>
 
