bugfix in userprofile URL

--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -11,13 +11,16 @@
 
     Als tableau hier niet automatisch geladen wordt (grijs scherm)
     Ga naar
-    <a href="https://tableau-test.volvocars.biz">Tableau server &raquo;</a> en log daar eerst in!
+    <a href="https://tableau-test.volvocars.biz/#/signin?closePopupWhenDone=true&site=Ghent&authSetting">Tableau server &raquo;</a> en log daar eerst in!
     Kom na het inloggen terug naar
     <strongd>deze</strongd> pagina.
 
     Als de 'maximo' tools in tableau niet automatisch laden.
     Ga naar
     <a href="https://equi"> https equi &raquo;</a>en klik daar op 'advanced' proceed. (werkt enkel in chrome)
+
+
+
 </div>
 
 <div>
