Added basic stuff for jens

--- a/EqUiWebUi/Areas/Welding/Views/Welding/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Welding/Index.cshtml
@@ -37,6 +37,32 @@
 
 <p></p>
 
+<div class="card">
+    <div class="card-header bg-dark">
+        <h5 class="card-title text-white">
+            Grid basics
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h5>
+    </div>
+    <div class="card-body">
+
+        <p>
+            <a href="~/Welding/Welding/AutomaticWorkFlowULPlans" class="btn btn-primary btn-sm">AutomaticWorkFlowULPlans &raquo;</a>
+        </p>
+
+        <p>
+            <a href="~/Welding/Welding/AutomaticWorkFlowULPlansFilter" class="btn btn-primary btn-sm">AutomaticWorkFlowULPlansFilter &raquo;</a>
+            (no param passed)
+        </p>
+
+        <p>
+            <a href="~/Welding/Welding/AutomaticWorkFlowULPlansFilter?Ul_plan=ietsanders" class="btn btn-primary btn-sm">AutomaticWorkFlowULPlansFilter &raquo;</a>
+            (with param passed)
+        </p>
+    </div>
+</div>
+
+<p></p>
 
 @*This card is default collapsed see fa-rotate-180 and display:none*@
 <div class="card">
