--- a/EqUiWebUi/Areas/Alert/Views/l_variants/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/l_variants/Index.cshtml
@@ -11,10 +11,10 @@
 </p>
 @Html.Grid(Model).Named("l_variants").Build(columns =>
 {
-    columns.Add(c => c.id).Titled("ID").InitialSort(GridSortOrder.Desc).Css("XXd-none XXd-md-block");;
+    columns.Add(c => c.id).Titled("ID").InitialSort(GridSortOrder.Desc).Css("XXd-none XXd-md-block");
     columns.Add(c => c.c_triggers.alertType).Titled("alertType");
-    columns.Add(c => c.CreateDate).Titled("CreateDate").Formatted("{0:dd-MM-yyyy HH:mm:ss}").Css("XXd-none XXd-md-block");;
-    columns.Add(c => c.L_users.username).Titled("ChangedUser").Css("XXd-none XXd-md-block");;
+    columns.Add(c => c.CreateDate).Titled("CreateDate").Formatted("{0:dd-MM-yyyy HH:mm:ss}").Css("XXd-none XXd-md-block");
+    columns.Add(c => c.L_users.username).Titled("ChangedUser").Css("XXd-none XXd-md-block");
     columns.Add(c => c.variantGroup).Titled("variantGroup");
     columns.Add(c => c.Comment).Titled("Comment");
     //add edit button for controlLimits
