--- a/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocationGrid.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocationGrid.cshtml
@@ -11,10 +11,10 @@
 
 //add edit button
 columns.Add(c => c)
-        .Titled("")
-        .Encoded(false)
-        .RenderedAs(c => MyFilters.IconActionLink("http://maximoui.volvocars.biz/maximo/ui/maximo.jsp?event=loadapp&value=wotrack&additionalevent=useqbe&additionaleventvalue=wonum=" + c.WONUM, "glyphicon glyphicon-pencil", "", "Edit this workorder in maximo", "OpenNewWindow")
-        ).Filterable(false);
+.Titled("")
+.Encoded(false)
+.RenderedAs(c => MyFilters.IconActionLink("http://maximoui.volvocars.biz/maximo/ui/maximo.jsp?event=loadapp&value=wotrack&additionalevent=useqbe&additionaleventvalue=wonum=" + c.WONUM, "glyphicon glyphicon-pencil", "", "Edit this workorder in maximo", "OpenNewWindow")
+).Filterable(false);
 
 
 }).Sortable().Pageable(pager =>
@@ -26,10 +26,8 @@ columns.Add(c => c)
 @*inform user that this is a realtime connection*@
 @if (ViewBag.RealtimeConn)
 {
-    <div class="label">
-        <div class="label label-danger">
-            RT
-        </div>
+    <div class="badge badge-pill badge-warning">
+        RT
     </div>
 }
 
