workorder autoclick now only when 1 workorder

--- a/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
@@ -108,8 +108,11 @@
             },
             reloadEnded: function () {
                 workorderOnLocationGridspinner.stop();
-                //simulate click on first row so that the details load automatic
-                $("#Workorders>table>tbody>tr:first").trigger('click');
+                //simulate click on first row so that the details load automatic IF ROWCOUNT == 1
+                console.log($('#Workorders>table>tbody>tr').length);
+                if ($('#Workorders>table>tbody>tr').length == 1) {
+                    $("#Workorders>table>tbody>tr:first").trigger('click');
+                }
                 //subscribe to click event (launch external window)
                 initUrlNewWindow();
             },
