issue with no wo result. And changed loading icon for wo details

--- a/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/_woParentDetails.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/_woParentDetails.cshtml
@@ -2,7 +2,7 @@
 
 <div class="card">
     <div class="card-header bg-dark">
-        <h4>WoDetails <strong>@ViewBag.parentwonum</strong> (parent)</h4>
+        <h4 class="text-white">WoDetails <strong>@ViewBag.parentwonum</strong> (parent)</h4>
         <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
     </div>
 
