--- a/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/WoParentDetails.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/WoParentDetails.cshtml
@@ -9,7 +9,7 @@
 <script type="text/javascript">
     @*run on doc ready *@
     $(document).ready(function () {
-        $("#woDetailsPartial").html("Loading.....");
+        $("#woDetailsPartial").html("<div class='card-body'><i class='fa fa-spinner fa-pulse fa-2x fa-fw'></i><span class='sr-only'></span>Loading....</div>");
         var url = "@Url.Action("_woParentDetails", "WorkorderDetails")?parentwonum=" + @ViewBag.parentwonum + "&RealtimeConn=" + @ViewBag.RealtimeConn.ToString().ToLower();
         $("#woDetailsPartial").load(url);
     })
