--- a/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/Workorders.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/Workorders.cshtml
@@ -133,7 +133,7 @@
 <hr />
 @*only shown while loading*@
 <div id="loader" class="alert alert-info">
-    loading workorders....
+    <div class='card-body'><i class='fa fa-spinner fa-pulse fa-2x fa-fw'></i><span class='sr-only'></span>Loading....</div>
 </div>
 @*table will be loaded in this*@
 
