--- a/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
@@ -97,7 +97,7 @@
                 //add new placeholder afhter selected row
                 $(row).after('<tr id="placeholder"><td colspan="10000"><div class=""><div class="" id ="placeholderPartial"></div></div></td></tr>');
                 //animation
-                $("#placeholderPartial").html("Loading.....");
+                $("#placeholderPartial").html("<div class='card-body'><i class='fa fa-spinner fa-pulse fa-2x fa-fw'></i><span class='sr-only'></span>Loading....</div>");
                 //load url in placeholder
                 var url = "@Url.Action("_woDetails", "WorkorderDetails")?RealtimeConn=@Model.realtimeConn&wonum=" + data.WONUM;
                 $("#placeholderPartial").load(url);
