bug met render user site (voorlopig in carousel dedump)

--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -24,13 +24,10 @@
             Bevat alles nu in storing en storingen die langer dan 1 minut hebben geduurd.
         </p>
 
-        @{
-            string urlIntranetSupervis = @Uri.EscapeDataString("http://webapps.gen.volvocars.net/applications/eng/equipment/supervisiep1/intranet");
-            <p>
-                <a href="~/Home/Rendersite?url=@urlIntranetSupervis" class="btn btn-primary btn-sm">Supervisie Intranet P1 &raquo;</a>
-                Supervisie (intranet)
-            </p>
-        }
+        <p>
+            <a href="~/PlcSupervisie/Screenshot/CarouselBF" class="btn btn-primary btn-sm">Supervisie Intranet P1 &raquo;</a>
+            Supervisie (intranet)
+        </p>
 
         <p>
             <a href="~/Alert/Alert/Index" class="btn btn-primary btn-sm">Alerts &raquo;</a>
