--- a/EqUiWebUi/Views/Dynamic/_CheckStatement.cshtml
+++ b/EqUiWebUi/Views/Dynamic/_CheckStatement.cshtml
@@ -1,5 +1,11 @@
-﻿<h2>CheckStatement result</h2>
-<div class="modal-body">
-    @Html.Raw(ViewBag.mandatoryColumnsResult)
+﻿<div class="card">
+    <div class="card-header bg-warning">
+        <h6 class="card-title">
+            CheckStatement resul
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1 text-black-50"></i></span>
+        </h6>
+    </div>
+    <div class="card-body">
+        @Html.Raw(ViewBag.mandatoryColumnsResult)
+    </div>
 </div>
-
