Acces denied page

--- a/EqUiWebUi/Areas/user_management/Views/users/_settings.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/users/_settings.cshtml
@@ -9,6 +9,8 @@
     <div class="card-body">
         <p><a href="~/user_management/users/Index" class="btn btn-primary btn-sm">Users &raquo;</a>Beheer van gebruikers</p>
         <p><a href="~/user_management/usersPermisions/Index" class="btn btn-primary btn-sm">UsersPermisions &raquo;</a>Beheer van rechten</p>
+        <p><a href="~/user_management/user/ForbiddenMethod" class="btn btn-danger btn-sm">ForbiddenMethod &raquo;</a>Test auth page</p>
+        <p><a href="~/user_management/user/LoginPrompt" class="btn btn-danger btn-sm">LoginPrompt &raquo;</a>Test login page</p>
     </div>
     <div class="card-footer">
         <h6>Active sessions: @ViewBag.ActiveSessions</h6>
